Fixed redundant component and added sidebar as top container on mobile. Pull request sent.

--- a/src/styles/Wizeline.css
+++ b/src/styles/Wizeline.css
@@ -144,6 +144,10 @@
     cursor: pointer;
 }
 
+.wz-right {
+    right: 0;
+}
+
 @media (max-width: 600px) {
     .wz-header > .nav-btn {
       display: inline-block;
